--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,29 @@
   box-sizing: border-box;
   font-family: "Plus Jakarta Sans", sans-serif;
 }
+
+/* ToggleSwitch */
+.toggleSwitch {
+  transition: 0.4s;
+}
+
+.toggleSwitch::before {
+  position: absolute;
+  content: "";
+  height: 19px;
+  width: 19px;
+  left: 3px;
+  top: 3.4px;
+  transition: 0.4s;
+  background: white;
+  border-radius: 50%;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
+}
+
+input:checked + .toggleSwitch {
+  background: #9945ff;
+}
+
+input:checked + .toggleSwitch::before {
+  transform: translateX(15.5px);
+}
